#18890 closed bug (fixed)

[Tracker-prefs] "Volume icons" and "Disk mount" missing

Reported by: Starcrasher Owned by: nobody
Priority: normal Milestone: R1/beta5
Component: Preferences/Tracker Version: R1/Development
Keywords: Cc:
Blocked By: Blocking:
Platform: All

Description (last modified by humdinger)

I just updated a 32 bits nightly to hrev57707 on an USB key. I tried to change disks mounting prefs from menu and Tracker prefs popped up, but the "Volume icons" and "Disk mount" settings are missing.

I have no idea when it started to happen but note that it is working normally on Beta4.

Change History (4)

comment:1 by waddlesplash, 10 months ago

Component: - GeneralApplications/Tracker
Milestone: UnscheduledR1/beta5

comment:2 by Starcrasher, 10 months ago

I was wrong, it doesn't show up on 64 bits nightly either.

comment:3 by humdinger, 10 months ago

Component: Applications/TrackerPreferences/Tracker
Description: modified (diff)
Summary: [Tracker] Disk mounting prefs don't show up in 32 bits nightly[Tracker-prefs] "Volume icons" and "Disk mount" missing

The "Disk mount" settings are actually part of the Tracker preferences. "The "Volume icons" settings are also missing. I've edited title and decription of this ticket accordingly.

comment:4 by madmax, 10 months ago

Resolution: fixed
Status: newclosed
Version: R1/beta4R1/Development

Fixed in hrev57708.

Note: See TracTickets for help on using tickets.