Tracker: remove spurious enum value

Introduced in 90510b4af9d1d88bf75ff403b3522dc37dc89c5f with no use. As
those values are the page indices of the list in the settings window,
adding the later pages fail.

Fixes: #18890
Change-Id: I9b28f8b279163ea1b54e5659c95c2fd80bb88ed2